--- a/chat/templates/base.html
+++ b/chat/templates/base.html
@@ -1,9 +1,11 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title %}DawTalk{% endblock  %}</title>
+    <link href="{% static 'css/style.css' %}" rel="stylesheet" />
+    <title>{% block title %}{% endblock %}</title>
 </head>
 <body>
     {% block content %}{% endblock  %}
