--- a/chat/templates/chat/room.html
+++ b/chat/templates/chat/room.html
@@ -1,17 +1,55 @@
 {% extends "base.html" %}
+{% load static %}
 {% block title %}
-    Chat room
+    Chat Room
 {% endblock %}
 {% block content %}
+    <div id="chat">
+    </div>
     <div id="chat-input">
         <input id="chat-message-input" type="text" />
         <input id="chat-message-submit" type="submit" value="Send" />
     </div>
 {% endblock %}
 {% block include_js %}
+    {{ request.user.username|json_script:"request-user" }}
 {% endblock %}
 {% block domready %}
-    const url = 'ws://' + window.location.host +
-    '/ws/chat/room/' + courseId + '/';
-    const chatSocket = new WebSocket(url);
+const requestUser = JSON.parse(
+    document.getElementById('request-user').textContent
+);
+const url = 'ws://' + window.location.host + '/ws/chat/room/';
+const chatSocket = new WebSocket(url);
+chatSocket.onmessage = function(event) {
+    const data = JSON.parse(event.data);
+    const chat = document.getElementById('chat');
+    chat.innerHTML += '<div class="message">' +
+    data.message + '</div>';
+    chat.scrollTop = chat.scrollHeight;
+};
+chatSocket.onclose = function(event) {
+    console.error('Chat socket closed unexpectedly');
+};
+const input = document.getElementById('chat-message-input');
+const submitButton = document.getElementById('chat-message-submit');
+submitButton.addEventListener('click', function(event) {
+    const message = input.value;
+    if(message) {
+        // send message in JSON format
+        chatSocket.send(JSON.stringify({'message': message}));
+        // clear input
+        input.innerHTML = '';
+        input.focus();
+    }
+});
+input.addEventListener('keypress', function(event) {
+    if (event.key === 'Enter') {
+        // cancel the default action, if needed
+        event.preventDefault();
+        // trigger click event on button
+        submitButton.click();
+    }
+});
+   
+input.focus();
 {% endblock %}
